# theater-service

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 63b228d97cde_initial.py  cc5197a7d894_add_new.py
src/: main.py
src/application/usecases/: __init__.py  get_theater.py  list_theaters.py
src/application/usecases/hall/: __init__.py  create_hall.py  get_hall.py
src/application/usecases/halls/: __init__.py  create_hall.py  create_seats.py  list_halls.py
src/application/usecases/seat/: __init__.py  get_seat.py  list_seats.py
src/application/usecases/theater/: __init__.py  create_theater.py
src/domain/entities/: __init__.py  hall.py  seat.py  theater.py
src/domain/exceptions/: __init__.py  hall.py  seat.py  theater.py
src/domain/repositories/: __init__.py  hall_repository.py  seats_repository.py  theater_repository.py
src/infrastructure/config/: __init__.py  dbConfig.py  grpcConfig.py  loggerConfig.py  settings.py
src/infrastructure/db/: database.py  hall_repository_sqlalchemy.py  halls_repository_sqlalchemy.py  seat_repository_sqlalchemy.py  theater_repository_sqlalchemy.py
src/infrastructure/db/models/: __init__.py  base_model.py  halls.py  seats.py  theaters.py
src/presentation/grpc/: hall_controller.py  seat_controller.py  server.py  theater_controller.py  theater_mapped.py
